--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/web-manifest",
   "short_name": "12CharShortName",
-  "name": "Name",
-  "description": "description",
+  "name": "Vertisium",
+  "description": "The chat app!",
   "scope": "/",
   "icons": [  {
     "src": "icons/manifest-icon-192.maskable.png",
